<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.parts.details.PartDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewPartImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/part_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewPartName"
            style="@style/textview_part_spec_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPartImage"
            tools:text="Part name" />

        <TextView
            android:id="@+id/textViewLabelSpecifications"
            style="@style/textview_part_spec_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPartName"
            tools:text="Specifications:" />

        <TextView
            android:id="@+id/textViewSpecifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="25"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLabelSpecifications"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/textViewPartType"
            style="@style/textview_part_spec_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSpecifications"
            tools:text="@string/part_type_placeholder" />

        <TextView
            android:id="@+id/textViewManufacturer"
            style="@style/textview_part_spec_label"
            android:text="@string/manufacturer_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPartType" />

        <TextView
            android:id="@+id/textViewDeviceType"
            style="@style/textview_part_spec_label"
            android:text="@string/device_type_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewManufacturer" />

        <TextView
            android:id="@+id/textViewModels"
            style="@style/textview_part_spec_label"
            android:text="@string/device_models_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDeviceType" />

        <TextView
            android:id="@+id/textViewPrice"
            style="@style/textview_part_spec_label"
            android:layout_width="wrap_content"
            android:text="@string/price_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewModels" />

        <Button
            android:id="@+id/btnAddToCart"
            style="@style/button"
            android:text="@string/add_part_to_cart"
            app:layout_constraintBottom_toTopOf="@+id/textViewLabelReviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

        <TextView
            android:id="@+id/textViewLabelReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reviews_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAddToCart" />

        <Button
            android:id="@+id/btnWriteReview"
            style="@style/button"
            android:text="@string/write_a_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLabelReviews" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnWriteReview"
            tools:listitem="@layout/item_review" />

        <ProgressBar
            android:id="@+id/progressBarPartDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/textViewSpecifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>